--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "async": "^1.5.0",
     "minimist": "^1.2.0",
     "nano": "^6.1.5",
-    "npmlog": "^2.0.0"
+    "npmlog": "^2.0.0",
+    "lodash": "^3.10.1"
   },
   "devDependencies": {
-    "lodash": "^3.10.1",
     "standard": "^5.4.1",
     "semantic-release": "^6.0.3"
   }
